<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.justjava.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:id="@+id/name_view"
                android:hint="@string/customer_name"
                android:inputType="textCapWords"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/HeadingTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp">
                        <Button
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:text="@string/decrement"
                            android:onClick="decrement"/>
                        <TextView
                            android:id="@+id/quantity_text_view"
                            style="@style/NumberStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:text="1" />
                        <Button
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:text="@string/increment"
                            android:onClick="increment"/>
                    </LinearLayout>

                    <TextView
                        style="@style/HeadingTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalPrice"/>
                    <TextView
                        android:id="@+id/price_text_view"
                        style="@style/NumberStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$5.00"/>
                </LinearLayout>

                <!-- Options menu
                    Make sure to add new options to optionList constant in MainActivity.java -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="24dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/HeadingTextStyle"
                        android:text="@string/options"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CheckBoxStyle"
                        android:text="@string/option_whippedCream"
                        android:id="@+id/whippedCream_checkBox"
                        android:onClick="checkOption"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CheckBoxStyle"
                        android:text="@string/option_milk"
                        android:id="@+id/milk_checkBox"
                        android:onClick="checkOption"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CheckBoxStyle"
                        android:text="@string/option_sugar"
                        android:id="@+id/sugar_checkBox"
                        android:onClick="checkOption"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CheckBoxStyle"
                        android:text="@string/option_chocolate"
                        android:id="@+id/chocolate_checkBox"
                        android:onClick="checkOption"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitOrder"
                android:text="@string/orderButton"/>

            <TextView
                android:id="@+id/summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text=""/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
